# ecommerce-platform

gateway-service/: README.md  main.py  proxy.py  pyproject.toml
user-service/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
user-service/api/: __init__.py
user-service/api/v1/: __init__.py
user-service/api/v1/address/: __init__.py  address.py
user-service/api/v1/authentication/: __init__.py  authentication.py
user-service/api/v1/monitoring/: health.py
user-service/api/v1/profile/: __init__.py  profile.py
user-service/api/v1/users/: __init__.py  users.py
user-service/app/controllers/: __init__.py  address.py  auth.py  user.py
user-service/app/models/: __init__.py  address.py  user.py
user-service/app/repositories/: __init__.py  address.py  user.py
user-service/app/schemas/extra/: current_user.py  health.py
user-service/app/schemas/extras/: current_user.py
user-service/app/schemas/requests/: address.py  profile.py  users.py
user-service/core/: config.py  server.py
user-service/core/controller/: base.py
user-service/core/exceptions/: __init__.py  base.py
user-service/core/factory/: factory.py
user-service/core/repository/: base.py
user-service/core/security/: __init__.py  jwt.py  password.py
user-service/migrations/: env.py
user-service/migrations/versions/: 2f879f119575_intial_migration.py  42777e92d4cf_added_the_userauditmixins_and_more_.py  69a45e869414_initial_migration.py  7b19fd27fd71_adding_the_address_model.py  e36bb66d1531_initial_migration.py  e77ea6be96cc_removed_the_relationship.py
(+21 files in other folders)
